tried to center div

--- a/style.css
+++ b/style.css
@@ -2,15 +2,46 @@
   margin: 0;
 }
 :root {
-  --body-bg-color: #FAF7FD;
-  --purple: #BB99DD;
+  --body-bg-color: #faf7fd;
+  --purple: #bb99dd;
 }
 
 body {
   background-color: var(--body-bg-color);
 }
 
-div #container {
-  margin: 0 auto;
-  width: 10px;
+body * {
+  font-family: "Poppins", sans-serif;
+  color: var(--purple);
+}
+
+#container {
+  text-align: center;
+}
+
+#profile img {
+  width: 112px;
+  border-radius: 50%;
+}
+
+#profile p {
+  font-weight: 300;
+  line-height: 24px;
+
+  margin-top: 15px;
+}
+
+ul {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+
+  padding: 24px 0;
+}
+
+ul li a {
+
+  border: 2px solid var(--purple);
+  border-radius: 4px;
 }
